Bug 459557 - Shortcuts with Ctrl + Alt + Letter key are impossible to activate (English UK keyboard - QWERTY US International setting)
Summary: Shortcuts with Ctrl + Alt + Letter key are impossible to activate (English UK...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 5.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-23 10:01 UTC by Hologram
Modified: 2023-11-26 11:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot Keyboard shortcuts (127.98 KB, image/png)
2022-09-23 10:01 UTC, Hologram
Details
Systeminfo (11.64 KB, text/plain)
2022-09-23 10:04 UTC, Hologram
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hologram 2022-09-23 10:01:19 UTC
Created attachment 152362 [details]
Screenshot Keyboard shortcuts

SUMMARY
***
If I set a keyboard shortcut to Ctrl + Alt + Any letter key, I am likely not able to activate the keyboard shortcut when Ctrl + Alt + the letter key generates a special symbol, such as: ä å é ® þ ü ú í ó ö á ß ð ø æ ©ñ µ.
So this excludes only F, G, H, J, K, X, V, B, and . keys. Those keys are suitable inputs with Ctrl + Alt for me. 
***


STEPS TO REPRODUCE
1. Set the system language to English UK (not sure if necessary) and the Keyboard to US International under Windows language settings. 
2. Go to Configure Krita > Keyboard shortcuts
3. Go to Menu > Image > Scale Image to new size and assign this to Ctrl + Alt + P. 
4. Use the shortcut Ctrl + Alt + P.

OBSERVED RESULT
Notice that Krita records Ctrl + Alt + ö. 
When activating the shortcut nothing happens. 

EXPECTED RESULT
I would expect that the Scale Image to new size dialog pops-up after using the keyboard shortcut. 

SOFTWARE/OS VERSIONS
Windows: 10
Qt Version: 5.12

ADDITIONAL INFORMATION
See screenshot in the attachments.
Comment 1 Hologram 2022-09-23 10:04:26 UTC
Created attachment 152363 [details]
Systeminfo
Comment 2 Dmitry Kazakov 2023-11-22 09:08:30 UTC
Git commit be99e02d636b0599777f508e0c4368525ad405f7 by Dmitry Kazakov.
Committed on 22/11/2023 at 10:08.
Pushed by dkazakov into branch 'master'.

Fix shortcuts editor to handle Ctrl+Alt-based keys on Windows

Basically, we ask Qt itself how it interprets this sequence...
(the rules of which are crazy)

M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +10   -0    CMakeLists.txt
A  +4    -0    config-request-possible-keys.h.in
M  +29   -0    libs/widgetutils/xmlgui/kkeysequencewidget.cpp

https://invent.kde.org/graphics/krita/-/commit/be99e02d636b0599777f508e0c4368525ad405f7
Comment 3 Dmitry Kazakov 2023-11-26 11:54:56 UTC
Git commit dd6ce91bcc2c6ad24e69c9b8c3f16fca7a6c2af1 by Dmitry Kazakov.
Committed on 26/11/2023 at 12:53.
Pushed by dkazakov into branch 'krita/5.2'.

Fix shortcuts editor to handle Ctrl+Alt-based keys on Windows

Basically, we ask Qt itself how it interprets this sequence...
(the rules of which are crazy)

# Conflicts:
#	3rdparty/ext_qt/CMakeLists.txt

M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +10   -0    CMakeLists.txt
A  +4    -0    config-request-possible-keys.h.in
M  +29   -0    libs/widgetutils/xmlgui/kkeysequencewidget.cpp

https://invent.kde.org/graphics/krita/-/commit/dd6ce91bcc2c6ad24e69c9b8c3f16fca7a6c2af1