Fix shortcuts editor to handle Ctrl+Alt-based keys on Windows

Basically, we ask Qt itself how it interprets this sequence...
(the rules of which are crazy)

BUG:459557